# eggercise.rs

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  egg.code-workspace  package-lock.json  package.json  postcss.config.js  rust-toolchain.toml  rustfmt.toml  vite.config.js
crates/client/: Cargo.toml
crates/client/migrations/: 001-exercise  002-session  003-session_exercise  004-exercise_group  005-exercises_batch_1
crates/client/src/: api.rs  lib.rs  routes.rs
crates/client/src/actions/: mod.rs  push_subscription.rs
crates/client/src/api/: add_key.rs  create_temporary_login.rs  fetch_user.rs  login.rs  mod.rs  ping.rs  register.rs
crates/client/src/api/notifications/: remove_subscription.rs  update_subscription.rs  vapid.rs
crates/client/src/api/rtc/: mod.rs  send_offer.rs
crates/client/src/components/: app.rs  mod.rs  online_check.rs  plan.rs  registration_form.rs  routes.rs  today.rs
crates/client/src/components/components/: container.rs  exercise_group_list.rs  exercise_group_member_list.rs  exercise_list.rs  footer.rs  frontend_error_boundary.rs  mod.rs  model_list.rs  session_exercise_list.rs  session_list.rs  user_list.rs
crates/client/src/components/forms/: add_key.rs  create_temporary_login.rs  login.rs  mod.rs  registration.rs
crates/client/src/components/pages/: chart.rs  debug.rs  login.rs  mod.rs  notifications.rs  plan.rs  profile.rs  register.rs  today.rs
crates/client/src/db/: migrations.rs  mod.rs  sqlite3.rs
crates/client/src/db/model/: exercise.rs  mod.rs  user.rs
crates/client/src/db/model/exercise/: exercise.rs  exercise_group.rs  exercise_group_member.rs  mod.rs  session.rs  session_exercise.rs  user.rs  user_exercise.rs
crates/client/src/db/model/plan/: exercise_group.rs  instance.rs  mod.rs  plan.rs
crates/client/src/utils/: browser.rs  csrf.rs  location.rs  mod.rs  rtc.rs  sqlite3.rs  tracing.rs  websocket.rs  wrap_callback.rs
crates/server/: .gitignore  Cargo.toml  build.rs  migrations
crates/server/assets/: index.html  manifest.json  uninstall.html
crates/server/assets/css/: base.css  main_input.css  main_output.css  math_input.css
crates/server/assets/js/: main.js  sqlite3.wasm
crates/server/migrations/001-user/: up.sql
crates/server/migrations/002-credential/: up.sql
crates/server/migrations/003-temporary_login/: up.sql
crates/server/src/: cli.rs  constants.rs  database_connection.rs  errors.rs  lib.rs  main.rs  session.rs  utils.rs
crates/server/src/db/: database_connection.rs  mod.rs
crates/server/src/db/model/: mod.rs  user.rs
crates/server/src/middleware/: csrf.rs  mod.rs
crates/server/src/routes/: mod.rs  ping.rs
crates/server/src/routes/auth/: add_device_qr_code.rs  generate_qr_code.rs  login_finish.rs  login_start.rs  mod.rs  register_finish.rs  register_new_key_finish.rs  register_new_key_start.rs  register_start.rs  temporary_login.rs  user.rs
crates/server/src/routes/logging/: client_log.rs  mod.rs
crates/server/src/routes/notifications/: mod.rs  remove_push_subscription.rs  update_push_subscription.rs  vapid.rs
crates/server/src/routes/rtc/: mod.rs  offer.rs
crates/server/src/routes/websocket/: handler.rs  mod.rs  task.rs
crates/server/src/session_store/: mod.rs
crates/server/src/state/: args.rs  cli.rs  mod.rs  pool.rs  rtc.rs  state.rs  vapid_keys.rs  webauthn.rs  websocket.rs
crates/server/static/: index.html
crates/server/static/css/: base.css
crates/service-worker/: Cargo.toml  register_listeners.js
crates/service-worker/src/: lib.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/migrations/001-user/: up.sql
crates/shared/migrations/002-credential/: up.sql
crates/shared/migrations/003-temporary_login/: up.sql
crates/shared/migrations/004-exercise/: up.sql
crates/shared/migrations/005-exercise_group/: up.sql
crates/shared/migrations/005-session/: up.sql
crates/shared/migrations/005-user_exercise/: up.sql
crates/shared/migrations/006-exercise_group/: up.sql
crates/shared/migrations/006-plan/: up.sql
crates/shared/migrations/006-session_exercise/: up.sql
crates/shared/migrations/007-exercise_group/: up.sql
crates/shared/migrations/007-plan/: up.sql
crates/shared/migrations/007-plan_instance/: up.sql
crates/shared/migrations/007-session/: up.sql
crates/shared/migrations/008-exercises_batch_1/: up.sql
crates/shared/migrations/008-plan_exercise_group/: up.sql
crates/shared/migrations/008-session_exercise/: up.sql
crates/shared/migrations/009-session/: up.sql
crates/shared/migrations/010-session/: up.sql
crates/shared/migrations/010-session_exercise/: up.sql
crates/shared/migrations/011-session_exercise/: up.sql
crates/shared/migrations/012-service_version/: up.sql
crates/shared/src/: api.rs  lib.rs
crates/shared/src/api/: auth.rs  error.rs  mod.rs  object.rs  response_errors.rs
crates/shared/src/api/browser/: mod.rs  record_subscription.rs
crates/shared/src/api/fetch_fns/notifications/: mod.rs  (+3 more)
crates/shared/src/api/payloads/: mod.rs
crates/shared/src/model/: constants.rs  credential.rs  mod.rs  service_version.rs  temporary_login.rs  user.rs
crates/shared/src/model/exercise/: exercise.rs  exercise_group.rs  exercise_group_member.rs  mod.rs  reps.rs  session.rs  session_exercise.rs  set.rs  user_exercise.rs  weight.rs
crates/shared/src/model/plan/: config.rs  exercise_group.rs  instance.rs  mod.rs  plan.rs
crates/shared/src/model/user/: id.rs  login.rs  mod.rs  new.rs  push_subscription.rs  registration.rs  temporary_login.rs  user.rs
crates/shared/src/rtc/: mod.rs  peer_connector.rs  peer_map.rs  signalling_client.rs
crates/shared/src/rtc/types/: mod.rs  peer.rs  room.rs  signal.rs
crates/shared/src/types/: mod.rs  rtc.rs  uuid.rs  websocket.rs
crates/shared/src/types/websocket/: ice_candidate.rs  message_error.rs  mod.rs  offer.rs  sdp_type.rs
crates/shared/src/utils/: csrf.rs  fetch.rs  location.rs  mod.rs  push_subscription_key.rs  server_log.rs  tracing.rs
crates/shared/test-data/both/: up.sql
crates/shared/test-data/server/: up.sql
crates/webrtc/: Cargo.toml
(+64 files in other folders)
