[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.18"

# This is used for the service worker wasm package
[profile.dev-min-size]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[profile.release]
opt-level = 2

[workspace.dependencies]
# Panic hook to make debugging wasm easier
console_error_panic_hook = "0.1.7"

# Logging and tracing facade
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Loading env from .env files
dotenv = "0.15.0"

# Cargo.toml manifest parsing 
cargo_toml = "0.19.2"

# Application error helper
anyhow = "1.0.82"

# Date/time util
chrono = { version = "0.4.38", features = [ "serde" ] }

# Se/deserializing 
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

sha2 = "0.10.8"

leptos = { version = "0.6.11", features = ["nightly", "csr"] }
leptos_router = { version = "0.6.11", features = ["nightly", "csr"] }

# SQLite lib
rusqlite = { version = "0.30.0", features = ["bundled", "serde_json", "trace"] }

# SQL query builder
sea-query = { version = "0.30.7", features = [ "derive", "attr" ] }
sea-query-rusqlite = { version = "0.5.0", features = [ "with-chrono", "with-json", "with-uuid", "with-time" ] }

