[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.94"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[workspace.dependencies]
web-push = "0.10.1"
rand = "0.8.5"
base64 = "0.22.0"

# Panic hook to make debugging wasm easier
console_error_panic_hook = "0.1.7"

http = "1.1.0"

# Web framework
axum = {version = "0.7.5", features = [ "macros", "ws" ] }

mime = "0.3.17"

# Connection pooling for rusqlite
deadpool-sqlite = { version = "0.7.0", features = [ "tracing" ] }

# Helper attributes for serde
serde_with = "3.8.1"
http-serde = "2.1.0"

# Logging and tracing facade
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Loading env from .env files
dotenv = "0.15.0"

# Cargo.toml manifest parsing 
cargo_toml = "0.19.2"

# Application error helper
anyhow = "1.0.82"

# Date/time util
chrono = { version = "0.4.38", features = [ "serde" ] }

# Se/deserializing 
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

sha2 = "0.10.8"

leptos = { version = "0.6.12", features = ["nightly", "csr"] }
leptos_router = { version = "0.6.12", features = ["nightly", "csr"] }
leptos_reactive = "0.6.12"

# SQLite lib
rusqlite = { version = "0.30.0", features = ["bundled", "serde_json", "trace"] }

# SQL query builder
sea-query = { version = "0.30.7", features = [ "derive", "attr", "with-chrono" ] }
sea-query-rusqlite = { version = "0.5.0", features = [ "with-chrono", "with-json", "with-time" ] }

thiserror = "1.0.58"

# Provides HTTP requests for WASM
gloo-net = "0.5.0"

# Compile-time string formatting macros
const_format = "0.2.32"

# Webauthn framework
webauthn-rs = "0.5.0"
# Contains just the proto structs so they can be used from wasm without pulling in the whole thing
webauthn-rs-proto = "0.5.0"

web-sys = "0.3.69"

wasm-bindgen = "0.2.92"

wasm-bindgen-futures = "0.4.42"

gloo-utils = "0.2.0"

tracing-web = "0.1.3"

# Macro to include a dir in the binary
include_dir = "0.7.3"

paste = "1.0.15"

futures = "0.3.30"

web-time = "1.1.0"
