[package]
name = "client"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true 
leptos_router.workspace = true
console_error_panic_hook.workspace = true
thiserror.workspace = true
gloo-net.workspace = true
serde.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
webauthn-rs-proto = { workspace = true, features = [ "wasm" ] }
web-sys = { workspace = true, features = [
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
] }


http = "1.1.0"
mime = "0.3.17"

shared = { path = "../shared" }
