[package]
name = "client"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true 
leptos_router.workspace = true
console_error_panic_hook.workspace = true
thiserror.workspace = true
gloo-net.workspace = true
gloo-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
http.workspace = true
mime.workspace = true
webauthn-rs-proto = { workspace = true, features = [ "wasm" ] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [ "time" ] }
tracing-web.workspace = true
include_dir.workspace = true
chrono.workspace = true
web-sys = { workspace = true, features = [
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
] }

shared = { path = "../shared", features = [ "frontend" ] }
time = { version = "0.3.36", features = ["wasm-bindgen"] }
