[package]
name = "client"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-time.workspace = true
futures.workspace = true
leptos.workspace = true 
leptos_router.workspace = true
console_error_panic_hook.workspace = true
thiserror.workspace = true
gloo-net.workspace = true
gloo-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
http.workspace = true
mime.workspace = true
webauthn-rs-proto = { workspace = true, features = [ "wasm" ] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [ "time" ] }
tracing-web.workspace = true
include_dir.workspace = true
chrono.workspace = true
sea-query.workspace = true
time.workspace = true
web-sys = { workspace = true, features = [
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
    "PushManager",
    "ServiceWorkerRegistration",
    "PushSubscription",
    "PushSubscriptionOptionsInit",
    "PushEncryptionKeyName",
] }

shared = { path = "../shared", features = [ "wasm" ] }
meval = "0.2.0"
asciimath-rs = "0.6.2"
#TODO: this rev fixes nightly compile. Swap to crates.io once it is released
leptos-chartistry = { git = "https://github.com/feral-dot-io/leptos-chartistry" , rev = "9b65512" }
