[package]
name = "server"
edition.workspace = true
version.workspace = true

[build-dependencies]
anyhow.workspace = true
sha2.workspace = true
serde_json.workspace = true
wasm-bindgen-cli-support = "0.2.92"
shared = { path = "../shared", features = [ "build" ] }
base64 = "0.22.0"
wasm-opt = "0.116.1"
glob = "0.3.1"

[dependencies]
shared = { path = "../shared", features = [ "backend" ] }
anyhow.workspace = true
leptos.workspace = true
tracing.workspace = true
chrono.workspace = true
rusqlite.workspace = true
sea-query.workspace = true
sea-query-rusqlite.workspace = true
webauthn-rs = { workspace = true, features = [ "danger-allow-state-serialisation" ] }
axum.workspace = true
deadpool.workspace = true
deadpool-sqlite.workspace = true
mime.workspace = true
thiserror.workspace = true

# QR Code generation
qrcodegen = "1.8.0"

# Session management
tower-sessions = "0.12.2"
tower-sessions-deadpool-sqlite-store = "0.1"

# CLI arg parsing
clap = { version = "4.5.4", features = [ "derive", "env" ] }

# COBS encoding
corncobs = { version = "0.1.3", features = ["std"] }

# Parsing and expanding cron schedules
croner = "2.0.4"

# Future util
futures = "0.3.30"

# Macro to include a dir in the binary
include_dir = "0.7.3"

# Migrations for rusqlite
rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }

# Se/deserializing 
serde = { workspace = true }
serde_json = { workspace = true }

# Helpful traits and macros for working with enums and strings 
strum = { version = "0.26.2", features = ["derive"] }

# Async runtime
tokio = { version = "1.37.0", features = [ "full" ] }

# Utils for tokio runtime
tokio-util = "0.7.10"

# HTTP utils
tower-http = { version = "0.5.2", features = [ "trace", "fs", "set-header" ] }
tower = "0.4.13"

# ZSTD encryption bindings
zstd = "0.13.1"

walkdir = "2.5.0"

# Reduce rusqlite boilerplate when se/de rusqlite stmts/rows
exemplar = "0.9.0"