[package]
name = "server"
edition.workspace = true
version.workspace = true

[features]
default = [ "run-test-data-migrations" ]
run-test-data-migrations = []

[build-dependencies]
anyhow.workspace = true
sha2.workspace = true
serde_json.workspace = true
chrono.workspace = true
wasm-bindgen-cli-support = "0.2.92"
shared = { path = "../shared", features = [ "build" ] }
base64 = "0.22.0"
wasm-opt = "0.116.1"
glob = "0.3.1"

[dependencies]
shared = { path = "../shared", features = [ "backend" ] }
client = { path = "../client" }
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
axum.workspace = true
deadpool-sqlite.workspace = true
mime.workspace = true
include_dir.workspace = true
rusqlite = { workspace = true, features = [ "bundled" ] }
webauthn-rs = { workspace = true, features = [ "danger-allow-state-serialisation" ] }

# QR Code generation
qrcodegen = "1.8.0"

# Session management
tower-sessions = "0.12.2"
tower-sessions-deadpool-sqlite-store = "0.1"

# CLI arg parsing
clap = { version = "4.5.4", features = [ "derive", "env" ] }

# Future util
futures = "0.3.30"

# Migrations for rusqlite
rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }

# Se/deserializing 
serde = { workspace = true }

# Async runtime
tokio = { version = "1.37.0", features = [ "full" ] }

# HTTP utils
tower-http = { version = "0.5.2", features = [ 
    "trace", "fs", "set-header", "cors",
    "compression-br", "compression-deflate", "compression-gzip", "compression-zstd" ] }
tower = "0.4.13"
