[package]
name = "server"
edition.workspace = true
version.workspace = true

[features]
default = [ "run-test-data-migrations" ]
run-test-data-migrations = []

[build-dependencies]
anyhow.workspace = true
sha2.workspace = true
serde_json.workspace = true
chrono.workspace = true
wasm-bindgen-cli-support = "0.2.92"
# wasm feature is just to trigger build.rs when wasm related code changes so the client & worker get rebuilt
shared = { path = "../shared", features = [ "build", "wasm" ] }
base64.workspace = true
wasm-opt = "0.116.1"
glob = "0.3.1"

[dev-dependencies]
tokio-test = "0.4.4"

[dependencies]
shared = { path = "../shared", features = [ "backend" ] }
client = { path = "../client" }
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
axum.workspace = true
deadpool-sqlite.workspace = true
mime.workspace = true
include_dir.workspace = true
base64.workspace = true
rand.workspace = true
web-push.workspace = true
headers.workspace = true
dashmap.workspace = true

rusqlite = { workspace = true, features = [ "bundled" ] }
webauthn-rs = { workspace = true, features = [ "danger-allow-state-serialisation" ] }
# web-sys = { workspace = true, features = [
#     "RtcSessionDescriptionInit",
#     "RtcSdpType",
    
# ]}



# QR Code generation
qrcodegen = "1.8.0"

# Session management
tower-sessions = "0.12.2"
tower-sessions-deadpool-sqlite-store = "0.1"

# CLI arg parsing
clap = { version = "4.5.4", features = [ "derive", "env" ] }

# Future util
futures = "0.3.30"

# Migrations for rusqlite
rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }

# Se/deserializing 
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio = { version = "1.37.0", features = [ "full" ] }

# HTTP utils
tower-http = { version = "0.5.2", features = [ 
    "trace", "fs", "set-header", "cors", "limit", 
    "compression-br", "compression-deflate", "compression-gzip", "compression-zstd" ] }
tower = "0.4.13"
tokio-tungstenite = "0.23.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower-layer = "0.3.2"
thiserror.workspace = true
tower-service = "0.3.2"
loole = "0.3.1"
