[package]
name = "service-worker"

[lib]
crate-type = ["cdylib", "rlib"]

[package.edition]
workspace = true

[package.version]
workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
shared = { path = "../shared" }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [ 
    "console", "FetchEvent",  "Request",  
    "ReadableStream",  "ReadableStreamDefaultReader", 
    "Headers",  "ResponseInit",  "Response", 
    "ServiceWorkerGlobalScope", "WorkerGlobalScope", 
    "WorkerLocation", "Clients", "CacheStorage",
    "Cache",
] }
