[package]
name = "service-worker"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
console_error_panic_hook.workspace = true

js-sys = "0.3.69"
shared = { path = "../shared" }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [ 
    "console", "FetchEvent",  "Request",  
    "ReadableStream",  "ReadableStreamDefaultReader", 
    "Headers",  "ResponseInit",  "Response", 
    "ServiceWorkerGlobalScope", "WorkerGlobalScope", 
    "WorkerLocation", "Clients", "CacheStorage",
    "Cache", "RequestInit", "MessageEvent", "Url"
] }
gloo-utils = "0.2.0"
