[package]
name = "service-worker"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
console_error_panic_hook.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
gloo-utils.workspace = true

js-sys = "0.3.69"
shared = { path = "../shared", features = [ "wasm" ] }
web-sys = { workspace = true, features = [ 
    "console", "FetchEvent",  "Request",  
    "ReadableStream",  "ReadableStreamDefaultReader", 
    "Headers",  "ResponseInit",  "Response", 
    "ServiceWorkerGlobalScope", "WorkerGlobalScope", 
    "WorkerLocation", "Clients", "CacheStorage",
    "Cache", "RequestInit", "MessageEvent", "Url"
] }
