[package]
name = "shared"
edition.workspace = true
version.workspace = true

[features]
backend = [ 
    "rusqlite/serde_json", 
    "serde_json", 
    "exemplar", 
    "sea-query", 
    "sea-query-rusqlite", 
    "webauthn-rs", 
    "axum", 
    "deadpool-sqlite", 
    "web-push",

    "sea-query-enum", 
    "exemplar-model",
]
wasm = [ 
    "wasm-bindgen", 
    "gloo", 
    "leptos", 
    "exemplar", 
    "sea-query",
    "uuid/js",
    "base64",
    "mime",
    "wasm-bindgen-futures",
    "tracing-web",
    "time",
    "tracing-subscriber/time",
    "serde_json",
    "headers",
    "reconnecting-websocket",
    "futures",

    "sea-query-enum",
    
    "web-sys/PushSubscription",
    "web-sys/PushEncryptionKeyName",
    "web-sys/PushManager",
    "web-sys/PushSubscriptionOptionsInit",
    "web-sys/Exception",
]
build = [ "anyhow" ]

# These exist to remove the any(wasm, backend) scattered through the code
# Enable sea query enum derives
sea-query-enum = []
# Enable the examplar model derive for from_row
exemplar-model = [
    "rusqlite/chrono",
    "rusqlite/uuid",
]

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
dotenv.workspace = true
cargo_toml.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
const_format.workspace = true
http.workspace = true
http-serde.workspace = true
paste.workspace = true
just-webrtc.workspace = true
dashmap.workspace = true

futures = { workspace = true, optional = true }
reconnecting-websocket = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
mime = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
deadpool-sqlite = { workspace = true, optional = true }
leptos = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
gloo = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sea-query = { workspace = true, optional = true }
sea-query-rusqlite = { workspace = true, optional = true }
webauthn-rs = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
web-push = { workspace = true, optional = true }
tracing-web = { workspace = true, optional = true }
time = { workspace = true, optional = true }
headers = { workspace = true, optional = true }

stdext = "0.3.3"
exemplar = { version = "0.9.0", optional = true }
percent-encoding = "2.3.1"
uuid = { version = "1.0", features = [ "serde", "v4" ], default-features = false }

web-sys = { workspace = true, features = [ 
    "RtcSdpType",
]}
semver = "1.0.23"
