[package]
name = "webrtc"
edition.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
shared = { path = "../shared" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = [
  "MessageEvent",
  "RtcBundlePolicy",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcDataChannelType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcIceTransportPolicy",
  "RtcPeerConnection",
  "RtcPeerConnectionState",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webrtc = "0.11.0"